feat: refactor CSV repository classes to utilize CSVProperties for file path management