@@ -1,29 +1,30 @@
 package com.projecthub.repository.csv;
 
+import com.projecthub.config.CSVProperties;
+import com.projecthub.model.Task;
+import com.projecthub.repository.custom.CustomTaskRepository;
 import com.opencsv.CSVReader;
 import com.opencsv.CSVWriter;
 import com.opencsv.bean.ColumnPositionMappingStrategy;
 import com.opencsv.bean.CsvToBeanBuilder;
+import com.opencsv.bean.StatefulBeanToCsv;
 import com.opencsv.bean.StatefulBeanToCsvBuilder;
-import com.projecthub.model.Task;
-import com.projecthub.repository.custom.CustomTaskRepository;
-
-import org.springframework.beans.factory.annotation.Value;
+import com.opencsv.exceptions.CsvDataTypeMismatchException;
+import com.opencsv.exceptions.CsvRequiredFieldEmptyException;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Validator;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Repository;
 
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import com.opencsv.exceptions.CsvDataTypeMismatchException;
-import com.opencsv.exceptions.CsvRequiredFieldEmptyException;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import jakarta.validation.*;
-import java.nio.file.*;
+import java.util.Optional;
 import java.util.Set;
 
 /**
@@ -33,17 +34,14 @@ import java.util.Set;
 public abstract class CSVTaskRepository implements CustomTaskRepository {
 
     private static final Logger logger = LoggerFactory.getLogger(CSVTaskRepository.class);
+
     private final Validator validator;
+    private final CSVProperties csvProperties;
 
-    @Value("${app.tasks.filepath}")
-    private String tasksFilePath;
 
-    /**
-     * Constructs a new {@code CSVTaskRepository}.
-     */
-    public CSVTaskRepository() {
-        ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
-        this.validator = factory.getValidator();
+    public CSVTaskRepository(CSVProperties csvProperties, Validator validator) {
+        this.csvProperties = csvProperties;
+        this.validator = validator;
     }
 
     /**
@@ -53,8 +51,8 @@ public abstract class CSVTaskRepository implements CustomTaskRepository {
      * @throws IOException if an I/O error occurs during backup
      */
     private void backupCSVFile(String filePath) throws IOException {
-        java.nio.file.Path source = java.nio.file.Path.of(filePath);
-        java.nio.file.Path backup = Paths.get(filePath + ".backup");
+        Path source = Path.of(filePath);
+        Path backup = Path.of(filePath + ".backup");
         Files.copy(source, backup, StandardCopyOption.REPLACE_EXISTING);
         logger.info("Backup created for file: {}", filePath);
     }
@@ -77,27 +75,6 @@ public abstract class CSVTaskRepository implements CustomTaskRepository {
     }
 
     /**
-     * Retrieves all tasks from the CSV file.
-     *
-     * @return a list of {@code Task} objects
-     */
-    @Override
-    public List<Task> findAll() {
-        try (CSVReader reader = new CSVReader(new FileReader(tasksFilePath))) {
-            ColumnPositionMappingStrategy<Task> strategy = new ColumnPositionMappingStrategy<>();
-            strategy.setType(Task.class);
-            strategy.setColumnMapping("id", "name", "description", "status", "dueDate", "assignedUserId", "projectId");
-
-            return new CsvToBeanBuilder<Task>(reader)
-                    .withMappingStrategy(strategy)
-                    .build()
-                    .parse();
-        } catch (IOException e) {
-            throw new RuntimeException("Error reading tasks from CSV", e);
-        }
-    }
-
-    /**
      * Saves a task to the CSV file after validation and backup.
      *
      * @param task the {@code Task} object to save
@@ -108,27 +85,66 @@ public abstract class CSVTaskRepository implements CustomTaskRepository {
     public Task save(Task task) {
         validateTask(task);
         try {
-            backupCSVFile(tasksFilePath);
+            backupCSVFile(csvProperties.getTasksFilepath());
             List<Task> tasks = findAll();
             tasks.removeIf(t -> t.getId().equals(task.getId()));
             tasks.add(task);
 
-            try (CSVWriter writer = new CSVWriter(new FileWriter(tasksFilePath))) {
+            try (CSVWriter writer = new CSVWriter(new FileWriter(csvProperties.getTasksFilepath()))) {
                 ColumnPositionMappingStrategy<Task> strategy = new ColumnPositionMappingStrategy<>();
                 strategy.setType(Task.class);
-                strategy.setColumnMapping("id", "name", "description", "status", "dueDate", "assignedUserId", "projectId");
+                String[] memberFieldsToBindTo = {"id", "name", "description", "projectId"};
+                strategy.setColumnMapping(memberFieldsToBindTo);
 
-                new StatefulBeanToCsvBuilder<Task>(writer)
+                StatefulBeanToCsv<Task> beanToCsv = new StatefulBeanToCsvBuilder<Task>(writer)
                         .withMappingStrategy(strategy)
-                        .build()
-                        .write(tasks);
+                        .build();
+
+                beanToCsv.write(tasks);
             }
+
             logger.info("Task saved successfully: {}", task);
             return task;
         } catch (IOException | CsvDataTypeMismatchException | CsvRequiredFieldEmptyException e) {
             logger.error("Error saving task to CSV", e);
             throw new RuntimeException("Error saving task to CSV", e);
         }
+    }
+
+    /**
+     * Retrieves all tasks from the CSV file.
+     *
+     * @return a list of {@code Task} objects
+     */
+    @Override
+    public List<Task> findAll() {
+        try (CSVReader reader = new CSVReader(new FileReader(csvProperties.getTasksFilepath()))) {
+            ColumnPositionMappingStrategy<Task> strategy = new ColumnPositionMappingStrategy<>();
+            strategy.setType(Task.class);
+            String[] memberFieldsToBindTo = {"id", "name", "description", "projectId"};
+            strategy.setColumnMapping(memberFieldsToBindTo);
+
+            return new CsvToBeanBuilder<Task>(reader)
+                    .withMappingStrategy(strategy)
+                    .build()
+                    .parse();
+        } catch (IOException e) {
+            logger.error("Error reading tasks from CSV", e);
+            throw new RuntimeException("Error reading tasks from CSV", e);
+        }
+    }
+
+    /**
+     * Finds a task by its ID.
+     *
+     * @param id the ID of the task
+     * @return an {@code Optional} containing the task if found, or empty if not found
+     */
+    @Override
+    public Optional<Task> findById(Long id) {
+        return findAll().stream()
+                .filter(t -> t.getId().equals(id))
+                .findFirst();
     }
 
     /**
@@ -140,50 +156,27 @@ public abstract class CSVTaskRepository implements CustomTaskRepository {
     @Override
     public void deleteById(Long id) {
         try {
-            backupCSVFile(tasksFilePath);
+            backupCSVFile(csvProperties.getTasksFilepath());
             List<Task> tasks = findAll();
             tasks.removeIf(t -> t.getId().equals(id));
 
-            try (CSVWriter writer = new CSVWriter(new FileWriter(tasksFilePath))) {
+            try (CSVWriter writer = new CSVWriter(new FileWriter(csvProperties.getTasksFilepath()))) {
                 ColumnPositionMappingStrategy<Task> strategy = new ColumnPositionMappingStrategy<>();
                 strategy.setType(Task.class);
-                strategy.setColumnMapping("id", "name", "description", "status", "dueDate", "assignedUserId", "projectId");
+                String[] memberFieldsToBindTo = {"id", "name", "description", "projectId"};
+                strategy.setColumnMapping(memberFieldsToBindTo);
 
-                new StatefulBeanToCsvBuilder<Task>(writer)
+                StatefulBeanToCsv<Task> beanToCsv = new StatefulBeanToCsvBuilder<Task>(writer)
                         .withMappingStrategy(strategy)
-                        .build()
-                        .write(tasks);
+                        .build();
+
+                beanToCsv.write(tasks);
             }
+
             logger.info("Task deleted successfully: {}", id);
         } catch (IOException | CsvDataTypeMismatchException | CsvRequiredFieldEmptyException e) {
             logger.error("Error deleting task from CSV", e);
             throw new RuntimeException("Error deleting task from CSV", e);
         }
-    }
-
-    /**
-     * Finds all tasks associated with a specific project ID.
-     *
-     * @param projectId the ID of the project
-     * @return a list of tasks belonging to the specified project
-     */
-    @Override
-    public List<Task> findByProjectId(Long projectId) {
-        return findAll().stream()
-                .filter(task -> task.getProject() != null && task.getProject().getId().equals(projectId))
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Finds all tasks assigned to a specific user ID.
-     *
-     * @param userId the ID of the user
-     * @return a list of tasks assigned to the specified user
-     */
-    @Override
-    public List<Task> findByAssignedUserId(Long userId) {
-        return findAll().stream()
-                .filter(task -> task.getAssignedUser() != null && task.getAssignedUser().getId().equals(userId))
-                .collect(Collectors.toList());
     }
 }
